# Code-Smell-Detector

./: .gitignore  .gitmodules  THESIS.docx  test.cpp
CodeSmellDetector/: Detector_renderer.js  DetectorsConfig.json  Main.js  MainConfig.json  Smell_renderer.js  SmellsConfig.json  Stats_renderer.js  Utility.js
CodeSmellDetector/Smells/: Cyclo_complex.js  Dependency_circle.js  Dependency_count.js  Function_overload.js  God_line.js  Inappropriate_intimacy.js  Large_class.js  Large_file.js  Long_function.js  Long_identifier.js  Method_argc.js  Method_literals.js  Method_locals.js  Name_conventions.js  Nested_scopes.js  Redundant_protected.js  Smell0.js  Smell1.js  Virtual_destructor.js
CodeSmellDetector/code-smell-detector-GUI/: package.json
DependenciesMining/: DependenciesMining.cpp  DependenciesMining.h  Ignored.cpp  Ignored.h  IgnoredNamespaces.cpp  IgnoredNamespaces.h  STVisitor.cpp  STVisitor.h  StructuresTable.cpp  StructuresTable.h  StructuresTableID.cpp  StructuresTableID.h  SymbolTable.cpp  SymbolTable.h  SymbolTableTempl.cpp  SymbolTableTempl.h  Utilities.cpp  Utilities.h
DependenciesMining/ClangTool/: DependenciesMining.cpp  DependenciesMining.h
DependenciesMining/Ignored/: Ignored.h
DependenciesMining/SymbolTable/: STVisitor.h  SymbolTable.cpp  SymbolTable.h  SymbolTableTempl.h
Graph/: Graph.cpp  Graph.h  GraphVisitor.h
GraphGeneration/: GraphGeneration.cpp  GraphGeneration.h
GraphGenerator/: CMakeLists.txt  Graph-Generator-Main-Args.txt  README.md
GraphGenerator/ArchitectureMining/: ArchitectureMining.cpp  ArchitectureMining.h  CMakeLists.txt
GraphGenerator/DependenciesMining/: CMakeLists.txt  Ignore.txt
GraphGenerator/DependenciesMining/ClangTool/: CMakeLists.txt  DependenciesMining.cpp  DependenciesMining.h
GraphGenerator/DependenciesMining/ClangTool/Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
GraphGenerator/DependenciesMining/Ignored/: CMakeLists.txt  Ignored.cpp  Ignored.h
GraphGenerator/DependenciesMining/SymbolTable/: CMakeLists.txt  SymbolTable.cpp  SymbolTable.h  SymbolTableTempl.cpp  SymbolTableTempl.h
GraphGenerator/FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
GraphGenerator/Graph/: CMakeLists.txt  Graph.h
GraphGenerator/GraphGeneration/: CMakeLists.txt  GraphGeneration.cpp  GraphGeneration.h
GraphGenerator/GraphToJson/: CMakeLists.txt  GraphToJson.cpp  GraphToJson.h
GraphGenerator/Gui/: CMakeLists.txt  Gui.cpp  Gui.h  GuiController.cpp  GuiController.h
GraphGenerator/Incremental/: CMakeLists.txt  CompilationCache.cpp  CompilationCache.h  ImportST.cpp  ImportST.h  Incremental.cpp  Incremental.h  LoadGlobalCache.cpp  LoadGlobalCache.h
GraphGenerator/Incremental/Details/: CMakeLists.txt  Converters.cpp  Converters.h
GraphGenerator/Main/: Architecture Mining.cpp  ArchitectureMining.cpp  Architecture_Mining.cpp  CMakeLists.txt  Main.cpp  graph.json
GraphGenerator/Messages/: CMakeLists.txt  Messages.h
GraphGenerator/Messages/Detail/: Messages.h
GraphGenerator/ProgressBar/: CMakeLists.txt  ProgressBar.cpp  ProgressBar.h
GraphGenerator/SourceLoader/: CMakeLists.txt  SourceLoader.cpp  SourceLoader.h
GraphGenerator/Testfiles/: classes_simple.cpp  fields.cpp  free_functions.cpp  friends.cpp  include.h  methods_args_vars.cpp  namespaces.cpp  objects_used_on_methods.cpp  template_methods.cpp  template_types.cpp
GraphGenerator/Tests/: CMakeLists.txt
GraphGenerator/Tests/Integration/: CMakeLists.txt  IncrementalTests.cpp  Tests.cpp  out.json
GraphGenerator/Tests/Units/: CMakeLists.txt  ImportSTTests.cpp  Tests.cpp  sample_empty.json  sample_non_empty.json
GraphGenerator/Tests/Utility/: CMakeLists.txt  Utility.cpp  Utility.h
GraphGenerator/UnitTests/: CMakeLists.txt  IncrementalTests.cpp
GraphGenerator/Utilities/: CMakeLists.txt
GraphToJson/: GraphToJson.cpp  GraphToJson.h
GraphVisualizer/: graph.json  index.html  index.js  package-lock.json  package.json  style.css
GraphVisualizer/Config/: UIManager.js  config.js  config.json  config_data.json  config_schema.json
GraphVisualizer/Graph/: configApplicator.js  graph.js  graph.json  graphAppearance.js  (+5 more)
Main/: Architecture Mining.cpp
Sample_Compilation_DB/: compile_commands.json
SourceLoader/: SourceLoader.cpp  SourceLoader.h
Testfiles/: classes_simple.cpp  fields.cpp  friends.cpp  include2.h  member_classes.cpp  methods.cpp  methods_args_vars.cpp  objects_used_on_methods.cpp  template_methods.cpp  template_types.cpp  templates.cpp  templates_extra.cpp  test0.cpp  test1.cpp  test2.cpp
Utilities/: uobject_untyped.cpp  uobject_untyped.h  uvalue_untyped.cpp  uvalue_untyped.h
(+26 files in other folders)
